--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "pinia": "^2.0.36",
     "pinia-plugin-persistedstate": "^3.1.0",
+    "pusher-js": "^8.0.2",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
   },
